Well documented code that explains how to update the watch face.

--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="simplyandroidwear.skytek65.github.com.simplyandroidwear" >
+    package="com.github.skytek65.simplyandroidwear" >
 
     <uses-feature android:name="android.hardware.type.watch" />
 
